# mtl4ad

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: config_mistral_7b.yaml  config_opt_125m.yaml  granite_test.yaml  granite_train.yaml
scripts/: torch_setup.sh  train.sh
src/mtl4ad/: data_preprocessing.py  evaluate.py  model.py  train.py  train_2.py  utils.py
src/mtl4ad/resources/test/config/: test_config.yaml
src/mtl4ad/resources/test/dataset-sample/caption/: train.parquet  validation.parquet
src/mtl4ad/resources/test/dataset-sample/spectra/: train.parquet  validation.parquet
tests/: test_modules.py  test_trainer.py
